css: stop button overflow in topbar

--- a/apps/lab/src/neotoc.css
+++ b/apps/lab/src/neotoc.css
@@ -269,6 +269,7 @@ li:has(> .nt-non-foldable > .nt-toggle-fold-btn.nt-level-5:hover)
   flex-shrink: 0;
   border-radius: 4px;
   border: 1px solid var(--border-topbar-btn);
+  overflow: hidden; /* easy fix for perfect rounded corner */
 }
 
 .nt-top-bar-btn {
